[tool.poetry]
name = "keycloak_sync"
version = "1.0.0"
description = "keycloak cli tool"
authors = ["Kangyi LI <nolankangyi@gmail.com>"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-keycloak = "^0.23.0"
pandas = "^1.1.4"
numpy = "1.18.0"
PyYAML = "^5.3.1"
Cerberus = "^1.3.2"
coloredlogs = "^14.0"
click = "^7.1.2"
colorama = "^0.4.4"
google-cloud-storage = "^1.34.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kcctl = 'keycloak_sync.kcctl:kcctl'

